Fix image alignment in styleguide-bild-text block
- Change object-position for contain mode from 'center center' to 'center top'
- Images with contain fit are now aligned to top instead of vertically centered
- Improves visual presentation when images don't fill the full container height

--- a/wp-content/themes/abf-styleguide/blocks/styleguide-bild-text/style.scss
+++ b/wp-content/themes/abf-styleguide/blocks/styleguide-bild-text/style.scss
@@ -69,10 +69,11 @@
                     }
                 }
                 
-                // Contain: Bild vollständig sichtbar
+                // Contain: Bild vollständig sichtbar, oben ausgerichtet
                 &.styleguide-bild-text-image--contain {
                     .styleguide-bild-text-image {
                         object-fit: contain;
+                        object-position: center top;
                         min-height: 100%;
                     }
                 }
